CSE420_LAB/LAB_2/y.output
Terminals unused in grammar

   DO
   BREAK
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: variable_decl
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN param_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 param_list: param_list COMMA type_specifier ID
    9           | param_list COMMA type_specifier
   10           | type_specifier ID
   11           | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 variable_decl: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID
   18               | CHAR

   19 declaration_list: declaration_list COMMA ID
   20                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   21                 | ID
   22                 | ID LTHIRD CONST_INT RTHIRD

   23 statements: statement
   24           | statements statement

   25 statement: variable_decl
   26          | func_definition
   27          | expression_statement
   28          | compound_statement
   29          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   30          | IF LPAREN expression RPAREN statement
   31          | IF LPAREN expression RPAREN statement ELSE statement
   32          | WHILE LPAREN expression RPAREN statement
   33          | PRINTLN LPAREN ID RPAREN SEMICOLON
   34          | RETURN expression SEMICOLON

   35 expression_statement: SEMICOLON
   36                     | expression SEMICOLON

   37 variable: ID
   38         | ID LTHIRD expression RTHIRD

   39 expression: logic_expression
   40           | variable ASSIGNOP logic_expression

   41 logic_expression: rel_expression
   42                 | rel_expression LOGICOP rel_expression

   43 rel_expression: simple_expression
   44               | simple_expression RELOP simple_expression

   45 simple_expression: term
   46                  | simple_expression ADDOP term

   47 term: unary_expression
   48     | term MULOP unary_expression

   49 unary_expression: ADDOP unary_expression
   50                 | NOT unary_expression
   51                 | factor_info

   52 factor_info: factor

   53 factor: variable
   54       | ID LPAREN argument_list RPAREN
   55       | LPAREN expression RPAREN
   56       | CONST_INT
   57       | CONST_FLOAT
   58       | variable INCOP
   59       | variable DECOP

   60 argument_list: arguments
   61              | /* empty */

   62 arguments: arguments COMMA logic_expression
   63          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 30 31
ELSE (259) 31
FOR (260) 29
WHILE (261) 32
DO (262)
BREAK (263)
INT (264) 15
CHAR (265) 18
FLOAT (266) 16
DOUBLE (267)
VOID (268) 17
RETURN (269) 34
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 33
ADDOP (275) 46 49
MULOP (276) 48
INCOP (277) 58
DECOP (278) 59
RELOP (279) 44
ASSIGNOP (280) 40
LOGICOP (281) 42
NOT (282) 50
LPAREN (283) 6 7 29 30 31 32 33 54 55
RPAREN (284) 6 7 29 30 31 32 33 54 55
LCURL (285) 12 13
RCURL (286) 12 13
LTHIRD (287) 20 22 38
RTHIRD (288) 20 22 38
COMMA (289) 8 9 19 20 62
SEMICOLON (290) 14 33 34 35 36
CONST_INT (291) 20 22 56
CONST_FLOAT (292) 57
ID (293) 6 7 8 10 19 20 21 22 33 37 38 54
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 6 7, on right: 5 26
param_list (45)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (46)
    on left: 12 13, on right: 6 7 28
variable_decl (47)
    on left: 14, on right: 4 25
type_specifier (48)
    on left: 15 16 17 18, on right: 6 7 8 9 10 11 14
declaration_list (49)
    on left: 19 20 21 22, on right: 14 19 20
statements (50)
    on left: 23 24, on right: 12 24
statement (51)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 23 24 29 30 31
    32
expression_statement (52)
    on left: 35 36, on right: 27 29
variable (53)
    on left: 37 38, on right: 40 53 58 59
expression (54)
    on left: 39 40, on right: 29 30 31 32 34 36 38 55
logic_expression (55)
    on left: 41 42, on right: 39 40 62 63
rel_expression (56)
    on left: 43 44, on right: 41 42
simple_expression (57)
    on left: 45 46, on right: 43 44 46
term (58)
    on left: 47 48, on right: 45 46 48
unary_expression (59)
    on left: 49 50 51, on right: 47 48 49 50
factor_info (60)
    on left: 52, on right: 51
factor (61)
    on left: 53 54 55 56 57 58 59, on right: 52
argument_list (62)
    on left: 60 61, on right: 54
arguments (63)
    on left: 62 63, on right: 60 62


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    start            go to state 5
    program          go to state 6
    unit             go to state 7
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 1

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


State 2

   18 type_specifier: CHAR .

    $default  reduce using rule 18 (type_specifier)


State 3

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


State 4

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 5

    0 $accept: start . $end

    $end  shift, and go to state 11


State 6

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 1 (start)

    unit             go to state 12
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 7

    3 program: unit .

    $default  reduce using rule 3 (program)


State 8

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 9

    4 unit: variable_decl .

    $default  reduce using rule 4 (unit)


State 10

    6 func_definition: type_specifier . ID LPAREN param_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 variable_decl: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    6 func_definition: type_specifier ID . LPAREN param_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   21 declaration_list: ID .
   22                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 21 (declaration_list)


State 14

   14 variable_decl: type_specifier declaration_list . SEMICOLON
   19 declaration_list: declaration_list . COMMA ID
   20                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    6 func_definition: type_specifier ID LPAREN . param_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    RPAREN  shift, and go to state 19

    param_list      go to state 20
    type_specifier  go to state 21


State 16

   22 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   19 declaration_list: declaration_list COMMA . ID
   20                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 18

   14 variable_decl: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (variable_decl)


State 19

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 24

    compound_statement  go to state 25


State 20

    6 func_definition: type_specifier ID LPAREN param_list . RPAREN compound_statement
    8 param_list: param_list . COMMA type_specifier ID
    9           | param_list . COMMA type_specifier

    RPAREN  shift, and go to state 26
    COMMA   shift, and go to state 27


State 21

   10 param_list: type_specifier . ID
   11           | type_specifier .

    ID  shift, and go to state 28

    $default  reduce using rule 11 (param_list)


State 22

   22 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 29


State 23

   19 declaration_list: declaration_list COMMA ID .
   20                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 30

    $default  reduce using rule 19 (declaration_list)


State 24

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    WHILE        shift, and go to state 33
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 34
    PRINTLN      shift, and go to state 35
    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    LCURL        shift, and go to state 24
    RCURL        shift, and go to state 39
    SEMICOLON    shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    func_definition       go to state 44
    compound_statement    go to state 45
    variable_decl         go to state 46
    type_specifier        go to state 10
    statements            go to state 47
    statement             go to state 48
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 25

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 26

    6 func_definition: type_specifier ID LPAREN param_list RPAREN . compound_statement

    LCURL  shift, and go to state 24

    compound_statement  go to state 59


State 27

    8 param_list: param_list COMMA . type_specifier ID
    9           | param_list COMMA . type_specifier

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    type_specifier  go to state 60


State 28

   10 param_list: type_specifier ID .

    $default  reduce using rule 10 (param_list)


State 29

   22 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 22 (declaration_list)


State 30

   20 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 61


State 31

   30 statement: IF . LPAREN expression RPAREN statement
   31          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 62


State 32

   29 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 63


State 33

   32 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 64


State 34

   34 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 65
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 35

   33 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 66


State 36

   49 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable          go to state 67
    unary_expression  go to state 68
    factor_info       go to state 57
    factor            go to state 58


State 37

   50 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable          go to state 67
    unary_expression  go to state 69
    factor_info       go to state 57
    factor            go to state 58


State 38

   55 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 70
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 39

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


State 40

   35 expression_statement: SEMICOLON .

    $default  reduce using rule 35 (expression_statement)


State 41

   56 factor: CONST_INT .

    $default  reduce using rule 56 (factor)


State 42

   57 factor: CONST_FLOAT .

    $default  reduce using rule 57 (factor)


State 43

   37 variable: ID .
   38         | ID . LTHIRD expression RTHIRD
   54 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 71
    LTHIRD  shift, and go to state 72

    $default  reduce using rule 37 (variable)


State 44

   26 statement: func_definition .

    $default  reduce using rule 26 (statement)


State 45

   28 statement: compound_statement .

    $default  reduce using rule 28 (statement)


State 46

   25 statement: variable_decl .

    $default  reduce using rule 25 (statement)


State 47

   12 compound_statement: LCURL statements . RCURL
   24 statements: statements . statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    WHILE        shift, and go to state 33
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 34
    PRINTLN      shift, and go to state 35
    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    LCURL        shift, and go to state 24
    RCURL        shift, and go to state 73
    SEMICOLON    shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    func_definition       go to state 44
    compound_statement    go to state 45
    variable_decl         go to state 46
    type_specifier        go to state 10
    statement             go to state 74
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 48

   23 statements: statement .

    $default  reduce using rule 23 (statements)


State 49

   27 statement: expression_statement .

    $default  reduce using rule 27 (statement)


State 50

   40 expression: variable . ASSIGNOP logic_expression
   53 factor: variable .
   58       | variable . INCOP
   59       | variable . DECOP

    INCOP     shift, and go to state 75
    DECOP     shift, and go to state 76
    ASSIGNOP  shift, and go to state 77

    $default  reduce using rule 53 (factor)


State 51

   36 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 78


State 52

   39 expression: logic_expression .

    $default  reduce using rule 39 (expression)


State 53

   41 logic_expression: rel_expression .
   42                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 79

    $default  reduce using rule 41 (logic_expression)


State 54

   43 rel_expression: simple_expression .
   44               | simple_expression . RELOP simple_expression
   46 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 80
    RELOP  shift, and go to state 81

    $default  reduce using rule 43 (rel_expression)


State 55

   45 simple_expression: term .
   48 term: term . MULOP unary_expression

    MULOP  shift, and go to state 82

    $default  reduce using rule 45 (simple_expression)


State 56

   47 term: unary_expression .

    $default  reduce using rule 47 (term)


State 57

   51 unary_expression: factor_info .

    $default  reduce using rule 51 (unary_expression)


State 58

   52 factor_info: factor .

    $default  reduce using rule 52 (factor_info)


State 59

    6 func_definition: type_specifier ID LPAREN param_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


State 60

    8 param_list: param_list COMMA type_specifier . ID
    9           | param_list COMMA type_specifier .

    ID  shift, and go to state 83

    $default  reduce using rule 9 (param_list)


State 61

   20 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 84


State 62

   30 statement: IF LPAREN . expression RPAREN statement
   31          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 85
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 63

   29 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    SEMICOLON    shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    expression_statement  go to state 86
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 64

   32 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 87
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 65

   34 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 88


State 66

   33 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 89


State 67

   53 factor: variable .
   58       | variable . INCOP
   59       | variable . DECOP

    INCOP  shift, and go to state 75
    DECOP  shift, and go to state 76

    $default  reduce using rule 53 (factor)


State 68

   49 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 49 (unary_expression)


State 69

   50 unary_expression: NOT unary_expression .

    $default  reduce using rule 50 (unary_expression)


State 70

   55 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 90


State 71

   54 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    $default  reduce using rule 61 (argument_list)

    variable           go to state 67
    logic_expression   go to state 91
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58
    argument_list      go to state 92
    arguments          go to state 93


State 72

   38 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 94
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 73

   12 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 12 (compound_statement)


State 74

   24 statements: statements statement .

    $default  reduce using rule 24 (statements)


State 75

   58 factor: variable INCOP .

    $default  reduce using rule 58 (factor)


State 76

   59 factor: variable DECOP .

    $default  reduce using rule 59 (factor)


State 77

   40 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 67
    logic_expression   go to state 95
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 78

   36 expression_statement: expression SEMICOLON .

    $default  reduce using rule 36 (expression_statement)


State 79

   42 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 67
    rel_expression     go to state 96
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 80

   46 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable          go to state 67
    term              go to state 97
    unary_expression  go to state 56
    factor_info       go to state 57
    factor            go to state 58


State 81

   44 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 67
    simple_expression  go to state 98
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 82

   48 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable          go to state 67
    unary_expression  go to state 99
    factor_info       go to state 57
    factor            go to state 58


State 83

    8 param_list: param_list COMMA type_specifier ID .

    $default  reduce using rule 8 (param_list)


State 84

   20 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 20 (declaration_list)


State 85

   30 statement: IF LPAREN expression . RPAREN statement
   31          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 100


State 86

   29 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    SEMICOLON    shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    expression_statement  go to state 101
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 87

   32 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 102


State 88

   34 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 34 (statement)


State 89

   33 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 103


State 90

   55 factor: LPAREN expression RPAREN .

    $default  reduce using rule 55 (factor)


State 91

   63 arguments: logic_expression .

    $default  reduce using rule 63 (arguments)


State 92

   54 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 104


State 93

   60 argument_list: arguments .
   62 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 105

    $default  reduce using rule 60 (argument_list)


State 94

   38 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 106


State 95

   40 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 40 (expression)


State 96

   42 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 42 (logic_expression)


State 97

   46 simple_expression: simple_expression ADDOP term .
   48 term: term . MULOP unary_expression

    MULOP  shift, and go to state 82

    $default  reduce using rule 46 (simple_expression)


State 98

   44 rel_expression: simple_expression RELOP simple_expression .
   46 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 80

    $default  reduce using rule 44 (rel_expression)


State 99

   48 term: term MULOP unary_expression .

    $default  reduce using rule 48 (term)


State 100

   30 statement: IF LPAREN expression RPAREN . statement
   31          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    WHILE        shift, and go to state 33
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 34
    PRINTLN      shift, and go to state 35
    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    func_definition       go to state 44
    compound_statement    go to state 45
    variable_decl         go to state 46
    type_specifier        go to state 10
    statement             go to state 107
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 101

   29 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 108
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 102

   32 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    WHILE        shift, and go to state 33
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 34
    PRINTLN      shift, and go to state 35
    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    func_definition       go to state 44
    compound_statement    go to state 45
    variable_decl         go to state 46
    type_specifier        go to state 10
    statement             go to state 109
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 103

   33 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 110


State 104

   54 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 54 (factor)


State 105

   62 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    variable           go to state 67
    logic_expression   go to state 111
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 106

   38 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 38 (variable)


State 107

   30 statement: IF LPAREN expression RPAREN statement .
   31          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 112

    $default  reduce using rule 30 (statement)


State 108

   29 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 113


State 109

   32 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 32 (statement)


State 110

   33 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 33 (statement)


State 111

   62 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 62 (arguments)


State 112

   31 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    WHILE        shift, and go to state 33
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 34
    PRINTLN      shift, and go to state 35
    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    func_definition       go to state 44
    compound_statement    go to state 45
    variable_decl         go to state 46
    type_specifier        go to state 10
    statement             go to state 114
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 113

   29 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    WHILE        shift, and go to state 33
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 34
    PRINTLN      shift, and go to state 35
    ADDOP        shift, and go to state 36
    NOT          shift, and go to state 37
    LPAREN       shift, and go to state 38
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42
    ID           shift, and go to state 43

    func_definition       go to state 44
    compound_statement    go to state 45
    variable_decl         go to state 46
    type_specifier        go to state 10
    statement             go to state 115
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 114

   31 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 31 (statement)


State 115

   29 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 29 (statement)
